...
  ];

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: const Text('Clue Assistant'),
        actions: [
          const ConnectionStatusIndicator(),
          IconButton(
            icon: const Icon(Icons.save),
            tooltip: 'Save Game',
            onPressed: () async {
...
            _currentIndex = index;
          });
        },
        items: const [
          BottomNavigationBarItem(
            icon: Icon(Icons.history),
            label: 'Game Log',
          ),
          BottomNavigationBarItem(
            icon: Icon(Icons.grid_on),
            label: 'Deduction Grid',
          ),
          BottomNavigationBarItem(
...
