...
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: const Text('Clue Setup'),
        actions: [
          IconButton(
            onPressed: _loadGame,
            icon: const Icon(Icons.file_upload),
            tooltip: 'Load Game',
          ),
...
            _buildCardSection('Rooms', GameConstants.rooms),

            const SizedBox(height: 20),
            ElevatedButton(
              onPressed: _startGame,
              style: ElevatedButton.styleFrom(padding: const EdgeInsets.all(16)),
              child: const Text('Start Game', style: TextStyle(fontSize: 18)),
            ),
          ],
        ),
      ),
    );
  }
...
