...
          ],

          const SizedBox(height: 20),
          ElevatedButton(
            onPressed: _submit,
            child: Text(
              widget.initialTurn == null ? 'Submit Turn' : 'Save Changes',
            ),
          ),
        ],
      ),
    );
  }
...
